Bug 1171405 - Add baseline and ion ICs for GETELEM on unboxed plain objects, r=jandem.